--- a/Exercice/5- Exercice_musique/template/index.html
+++ b/Exercice/5- Exercice_musique/template/index.html
@@ -1,96 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music for everyone</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Music for Everyone</title>
+
 </head>
-
-<style>
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-/*_______________________ page 1 _________________________*/
-
-/*header*/
-
-header {
-    background-color: rgb(41, 40, 112);
-    grid-template-areas: 
-}
-
-.logo {
-    width: 5%;
-    height: 5%;
-    margin: 1% 1% 1% 12%;
-}
-
-
-.page1 {
-    background-image: url("fond1.jpg");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    margin: 0;
-    padding: 0%;
- }
-
-.logo2_homme {
-    text-align: center;
-}
-
-.logo2 {
-    width: 7%;
-    height: 7%;
-}
-
-h1 {
-    color: white;
-    margin: auto;
-}
-
-.freepik {
-    color: white;
-}
-
-.download {
-    
-}
-
-.start {
-
-
-}
-
-.noir1 {
-    width: 42%;
-    height: 42%;
-}
-
-
-</style>
-
 <body>
-    
-<!-- PAge 1 -->
 
-<div class="page1">
-    <header>
-        <img class="logo" src="logo.png">
-    </header>
+<!-- footer avec l'image du logo à gauche-->
 
-    <!-- <img class="fond1" src="fond1.jpg"> -->
-    <div class="logo2_homme">
-    <img class="logo2" src="logo2.png">
-    <h1>Music for everyone</h1>
+<footer>
+    <img src="logo.png" alt="image d'un logo"> 
+</footer>
+
+<!-- première page -->
+
+<div class="premiere_page">
+    <img class="logo2" src="logo2.png" alt="image d'un logo casque">
+    <h1>Music for Everyone</h1>
     <p class="freepik">Image from <u>Freepik</u></p>
-    <button class="download">DOWNLOAD NOW</button>
-    <button class="start">START FREE TRIAL</button>
-    <img class="noir1" src="noir1.png">
+    <div class="button">
+        <input class="Download" type="button" value="DOWNLOAD NOW" />
+        <input class="FreeTrial" type="button" value="START FREE TRIAL" />
+    </div>
+    <img class="mec1" src="mec1.png" alt="Un homme content écoute de la musique">
 </div>
+
+<!-- deuxième page -->
+
+<div class="deuxieme_page">
+    <div class="container">
+        <h2>Unlimited Access to 100K tracks</h2>
+        <p class="freepik2">Image from Freepik</p>
+        <img class="mec2" src="mec2.jpg" alt="Un homme écoute la radio">
+        <p class="Benefits">BENEFITS</p>
+        <p class="sample_text">Sample text. Clik to select the text box. Click again or double click to start editing the text. </p>
+        <input class="Read_more" type="button" value="READ MORE">
+    </div>
 </div>
+
+<!-- troisième page -->
+
+<div class="troisieme_page">
+    <img class="fond2" src="fond2" alt="">
+    <h3>LIVE MUSIC</h3>
+    <p class="30millions">+30 MILLION SONGS</p>
+    <p class="freepik3">Image from Freepik</p>
+    <p class="6mounth">6 mount of premium for $15</p>
+    <p class="Sample_text2">Sample text. Clik to select the text box. Click again or double click to start editing the text.</p>
+    <img class="mec3" src="mec3.png" alt="Homme qui écoute la radio">
+</div>
+
+<!-- quatrieme page -->
+
+<div class="quatrieme_page">
+    <h4>HOW IT WORKS</h4>
+    <div class="gridIcone">
+        <img src="icone1.png" alt="Icone pour créé un compte" class="icone">
+        <p class="titreIcone">CREATE AN ACCOUNT</p>
+        <p class="texteIcone">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa aliquid molestias a quas temporibus</p>
+        <img src="icone2.png" alt="Icone pour choisir un plan" class="icone">
+        <p class="titreIcone">CREATE AN ACCOUNT</p>
+        <p class="texteIcone">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa aliquid molestias a quas temporibus</p>
+        <img src="icone3.png" alt="Icone pour télécharger les musiques" class="icone">
+        <p class="titreIcone">CREATE AN ACCOUNT</p>
+        <p class="texteIcone">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa aliquid molestias a quas temporibus</p>
+    </div>
+    <input type="READ MORE" class="readmore">
+</div>
+
+<!-- cinquième page -->
+
+<div class="cinquieme_page">
+    <img src="radio.png" alt="Une radio" class="radio">
+    <h5>LIVE MUSIC</h5>
+    <p class="favorite">PLAY YOUR FAVORITE</p>
+    <p>Sample text. Click to select the text box. Click again or double  click to start editing the text.</p>
+    <p class="freepik">Image from <u>Freepik</u></p>
+    <input type="READ MORE" class="readmore">
+</div>
+
+<!-- sixieme page -->
+
+<div class="sixieme_page">
+    <div class="titreEtTexte">
+        <h6>Our Concept & Artists</h6>
+        <p class="freepik">Image from <u>Freepik</u></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae cupiditate ea accusamus expedita non maxime veniam vitae, repellendus perspiciatis a voluptatibus natus ratione dicta incidunt facilis. Minus fugiat aut, quod aliquid aperiam recusandae nostrum repellendus sapiente veniam deserunt ut cumque rerum aliquam laborum exercitationem corporis dignissimos molestiae sunt omnis. Quo.</p>
+        <input type="READ MORE" class="readmore">
+<div class="vignette">
+    <img src="vignette1.jpg" alt="Un mec joue de la batterie" class="vignette1">
+    <img src="vignette2.jpg" alt="Encore de la batterie" class="vignette2">
+    <img src="vignette3.jpg" alt="Photo d'un concert" class="vignette3">
+    <img src="vignette4.jpg" alt="Encore un concert" class="vignette4">
+</div>
+    </div>
+</div>
+
+<!-- septieme page -->
+
+<div class="septieme_page">
+    <div class="cadreInfo">
+        <div class="info">
+            <p class="Contact">Contact Info</p>
+            <p>+1 (234)-567-8910</p>
+            <p>contact@yourmail.com</p>
+            <p>203 Envato Labs, Behind Alis Street, Australia</p>
+        <!-- Icone -->
+        </div>
+        <div class="formulaire">
+            <form></form>
+        </div>
+    </div>
+    <p class="freepik">Image from <u>Freepik</u></p>
+</div>
+<footer><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae vitae dolores voluptatem assumenda tenetur. Ipsum.</p>
+<div class="footer2"><p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p></div>
+</footer>
+
 
 </body>
 </html>
